package com.example.bookclub.screens.book_details_screen

object BookDetailsScreenTestTag {
    const val SCROLL_CONT = "scrollCont"
    const val BACK_BUTTON = "backButton"
    const val BOOK_IMAGE = "bookDetailsImage"
    const val READ_BUTTON = "readButton"
    const val BOOKMARK_BUTTON = "bookmarkButton"
    const val TITLE_LARGE = "titleLarge"
    const val TITLE_SMALL = "titleSmall"
    const val PROGRESS_SECTION_TITLE = "progressSectionTitle"
    const val BOOK_PROGRESS = "bookProgress"
    const val CHAPTERS_SECTION_TITLE = "chaptersSectionTitle"
    const val CHAPTER_ITEM = "chapterItem"
}