<resources>
    <string name="app_name">BookClub</string>
    <string name="small_title_welcome">ОТКРОЙ ДЛЯ СЕБЯ</string>
    <string name="big_title_welcome">КНИЖНЫЙ\nМИР</string>
    <string name="email_input_hint">Электронная почта</string>
    <string name="password_input_hint">Пароль</string>
    <string name="enter_button_title">Войти</string>
    <string name="library_title">БИБЛИОТЕКА</string>
    <string name="bookmarks_title">закладки</string>
    <string name="new_small_title">НОВИНКИ</string>
    <string name="popular_small_title">ПОПУЛЯРНЫЕ КНИГИ</string>
    <string name="search_hint">Поиск по книгам</string>
    <string name="recent_category">Недавние запросы</string>
    <string name="genres_category">Жанры</string>
    <string name="authors_category">Авторы</string>
    <string name="read_now_category">Читаете сейчас</string>
    <string name="favorite_books_category">Избранные книги</string>
    <string name="quotes_category">Цитаты</string>
    <string name="read_button">Читать</string>
    <string name="bookmark_button_false">В избранное</string>
    <string name="bookmark_button_true">В избранном</string>
    <string name="progress_section_title">Прочитано</string>
    <string name="chapters_section_title">Оглавление</string>
    <string name="settings_bottom_sheet_title">Настройки</string>
    <string name="settings_side_sheet_title">Оглавление</string>
    <string name="add_quote">Добавить цитату</string>

    <string name="test_text">
        Париж, Лувр\n21.46
Знаменитый куратор Жак Соньер, пошатываясь, прошел под сводчатой аркой Большой галереи и устремился к первой попавшейся ему
на глаза картине, полотну Караваджо. Ухватился руками за позолоченную раму и стал тянуть
ее на себя, пока шедевр не сорвался со стены и
не рухнул на семидесятилетнего старика Соньера, погребя его под собой.
Как и предполагал Соньер, неподалеку с грохотом опустилась
металлическая решетка, преграждающая доступ в этот зал. Паркетный пол содрогнулся. Где-то завыла сирена игнализации.
Несколько секунд куратор лежал неподвижно, хватая ртом
воздух и пытаясь сообразить, на каком свете находится. Я все еще жив. Потом он выполз из-под полотна и начал судорожно озираться в поисках места, где можно спрятаться.
Голос прозвучал неожиданно близко:
— Не двигаться.
Стоявший на четвереньках куратор похолодел, потом медленно обернулся. Всего в пятнадцати футах от него, за решеткой, высилась внушительная и грозная фигура его преследователя. Высокий, широкоплечий, с мертвенно-бледной кожей и редкими
белыми волосами. Белки розовые, а зрачки угрожающего темнокрасного цвета. Альбинос достал из кармана пистолет, сунул
длинный ствол в отверстие между железными прутьями и прицелился в куратора.
    Париж, Лувр\n21.46
Знаменитый куратор Жак Соньер, пошатываясь, прошел под сводчатой аркой Большой галереи и устремился к первой попавшейся ему
на глаза картине, полотну Караваджо. Ухватился руками за позолоченную раму и стал тянуть
ее на себя, пока шедевр не сорвался со стены и
не рухнул на семидесятилетнего старика Соньера, погребя его под собой.
Как и предполагал Соньер, неподалеку с грохотом опустилась
металлическая решетка, преграждающая доступ в этот зал. Паркетный пол содрогнулся. Где-то завыла сирена игнализации.
Несколько секунд куратор лежал неподвижно, хватая ртом
воздух и пытаясь сообразить, на каком свете находится. Я все еще жив. Потом он выполз из-под полотна и начал судорожно озираться в поисках места, где можно спрятаться.
Голос прозвучал неожиданно близко:
— Не двигаться.
Стоявший на четвереньках куратор похолодел, потом медленно обернулся. Всего в пятнадцати футах от него, за решеткой, высилась внушительная и грозная фигура его преследователя. Высокий, широкоплечий, с мертвенно-бледной кожей и редкими
белыми волосами. Белки розовые, а зрачки угрожающего темнокрасного цвета. Альбинос достал из кармана пистолет, сунул
длинный ствол в отверстие между железными прутьями и прицелился в куратора.
        Париж, Лувр\n21.46
Знаменитый куратор Жак Соньер, пошатываясь, прошел под сводчатой аркой Большой галереи и устремился к первой попавшейся ему
на глаза картине, полотну Караваджо. Ухватился руками за позолоченную раму и стал тянуть
ее на себя, пока шедевр не сорвался со стены и
не рухнул на семидесятилетнего старика Соньера, погребя его под собой.
Как и предполагал Соньер, неподалеку с грохотом опустилась
металлическая решетка, преграждающая доступ в этот зал. Паркетный пол содрогнулся. Где-то завыла сирена игнализации.
Несколько секунд куратор лежал неподвижно, хватая ртом
воздух и пытаясь сообразить, на каком свете находится. Я все еще жив. Потом он выполз из-под полотна и начал судорожно озираться в поисках места, где можно спрятаться.
Голос прозвучал неожиданно близко:
— Не двигаться.
Стоявший на четвереньках куратор похолодел, потом медленно обернулся. Всего в пятнадцати футах от него, за решеткой, высилась внушительная и грозная фигура его преследователя. Высокий, широкоплечий, с мертвенно-бледной кожей и редкими
белыми волосами. Белки розовые, а зрачки угрожающего темнокрасного цвета. Альбинос достал из кармана пистолет, сунул
длинный ствол в отверстие между железными прутьями и прицелился в куратора.
    </string>
    <string name="font_size_header">Размер шрифта</string>
    <string name="line_spacing_header">Расстояние между строками</string>
    <string name="test_tag_button_enter">enter_button</string>
</resources>