package com.example.bookclub.screens.chapter_screen

object ChapterScreenTestTags {
    const val BACK_BUTTON = "back_button"
    const val BOOK_TITLE = "book_title"
    const val CHAPTER_TITLE = "chapter_title"
    const val NAVIGATE_BACK = "navigate_back"
    const val NAVIGATE_FORWARD = "navigate_forward"
    const val MENU_BUTTON = "menu_button"
    const val SETTINGS_BUTTON = "settings_button"
    const val CLOSE_SIDE_SHEET = "close_side_sheet"
    const val SIDE_SHEET_TITLE = "side_sheet_title"
    const val SIDE_SHEET_ITEM = "side_sheet_item"
}