package com.example.bookclub.screens.search_screen

object SearchScreenTestTags {
    const val SCROLL_COLUMN = "scroll_container"

    const val SEARCH_BAR = "search_bar"
    const val SEARCH_BAR_FIELD = "search_bar_field"
    const val SEARCH_BAR_PLACEHOLDER = "search_bar_placeholder"
    const val SEARCH_BACK_BUTTON = "search_back_button"

    const val RECENT_CATEGORY = "recent_category"
    const val GENRES_CATEGORY = "genres_category"
    const val AUTHORS_CATEGORY = "authors_category"

    const val SEARCH_RESULT = "search_result_item"
    const val RECENT_ITEM = "recent_item"
    const val GENRE_ITEM = "genre_item"
    const val AUTHOR_ITEM = "author_item"
}